rv+fragments+animation

--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -8,8 +8,8 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image"
         android:background="@drawable/round_background"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/image_width"
+        android:layout_height="@dimen/image_height"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.046"
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:textColor="@color/black"
         android:text="Title"
         android:textSize="@dimen/title_text_size"
         app:layout_constraintBottom_toTopOf="@+id/description"
@@ -36,6 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:textColor="@color/text_color"
         android:text="Description"
         android:textSize="@dimen/description_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
