--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="grey">@color/material_dynamic_neutral50</color>
+    <color name="grey">#DD6E6D6D</color>
 
 </resources>
