--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,11 +5,12 @@
     <dimen name="title_text_size">22sp</dimen>
     <dimen name="description_text_size">18sp</dimen>
 
-    <!--margin-->
-    <dimen name="horizontal_margin">64dp</dimen>
-    <dimen name="vertical_margin">32dp</dimen>
-
     <!--height & margin -->
     <dimen name="item_height">80dp</dimen>
-    <dimen name="item_margin">10dp</dimen>
+    <dimen name="item_margin">10dp</dimen>.
+    <dimen name="image_height">48dp</dimen>
+    <dimen name="image_width">48dp</dimen>
+    <dimen name="detail_image_height">96dp</dimen>
+    <dimen name="detail_image_width">96dp</dimen>
+
 </resources>
