--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/container"
-        android:name="com.bondidos.clevertec_task1.FirstFragment"
+        android:name="com.bondidos.clevertec_task1.fragments.FirstFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
