--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="@dimen/item_margin"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/item_height">
+    android:layout_height="@dimen/item_height"
+    android:layout_margin="@dimen/item_margin">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image"
-        android:background="@drawable/round_background"
         android:layout_width="@dimen/image_width"
         android:layout_height="@dimen/image_height"
+        android:background="@drawable/round_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.046"
@@ -19,12 +19,9 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/TextTitleStyle"
         android:layout_marginTop="16dp"
-        android:textColor="@color/black"
         android:text="Title"
-        android:textSize="@dimen/title_text_size"
         app:layout_constraintBottom_toTopOf="@+id/description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.133"
@@ -34,12 +31,9 @@
 
     <TextView
         android:id="@+id/description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/TextDescriptionStyle"
         android:layout_marginBottom="8dp"
-        android:textColor="@color/text_color"
         android:text="Description"
-        android:textSize="@dimen/description_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/title"
         app:layout_constraintHorizontal_bias="0.0"
