--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,5 +12,7 @@
     <dimen name="image_width">48dp</dimen>
     <dimen name="detail_image_height">96dp</dimen>
     <dimen name="detail_image_width">96dp</dimen>
+    <dimen name="toolbar_height">48dp</dimen>
+
 
 </resources>
