--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,5 +14,5 @@
     <dimen name="detail_image_width">300dp</dimen>
     <dimen name="toolbar_height">48dp</dimen>
 
-
+    <dimen name="button_width">200dp</dimen>
 </resources>
