--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.MainActivity">
+    tools:context=".presentation.ui.MainActivity">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/container"
-        android:name="com.bondidos.clevertec_task1.presentation.fragments.StartScreen"
+        android:name="com.bondidos.clevertec_task1.presentation.ui.fragments.startScreen.StartScreen"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
