--- a/app/src/main/res/layout/start_screen_fragment.xml
+++ b/app/src/main/res/layout/start_screen_fragment.xml
@@ -15,7 +15,7 @@
             android:id="@+id/showFromSP"
             android:layout_width="@dimen/button_width"
             android:layout_height="wrap_content"
-            android:text="@string/showfromsp"
+            android:text="@string/showFromSP"
             app:layout_constraintBottom_toTopOf="@+id/showNotification"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -26,7 +26,7 @@
             android:id="@+id/showContacts"
             android:layout_width="@dimen/button_width"
             android:layout_height="wrap_content"
-            android:text="@string/showcontacts"
+            android:text="@string/showContacts"
             app:layout_constraintBottom_toTopOf="@+id/selectContact"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
